--- a/package.json
+++ b/package.json
@@ -5,10 +5,41 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "docz dev"
+    "start": "docz dev --ts",
+    "build": "docz build --ts"
+  },
+  "dependencies": {
+    "emotion": "^9.1.3",
+    "emotion-theming": "^9.1.2",
+    "prismjs": "^1.14.0",
+    "react": "^16.4.0",
+    "react-adopt": "^0.6.0",
+    "react-dom": "^16.4.0",
+    "react-emotion": "^9.1.3",
+    "react-feather": "^1.1.0",
+    "react-github-button": "^0.1.11",
+    "react-helmet": "^5.2.0",
+    "react-images": "^0.5.17",
+    "react-powerplug": "^1.0.0-alpha.7",
+    "react-router": "^4.2.0",
+    "react-spinners": "^0.3.2",
+    "react-stickynode": "^2.0.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "docz": "^0.5.8",
-    "prettier": "^1.13.7"
+    "@types/prismjs": "^1.9.0",
+    "@types/react": "^16.3.14",
+    "@types/react-dom": "^16.0.5",
+    "@types/react-router": "^4.0.26",
+    "@types/react-router-dom": "^4.2.7",
+    "babel-plugin-emotion": "^9.0.1",
+    "docz": "^0.5.5",
+    "docz-core": "^0.5.5",
+    "favicons-webpack-plugin": "^0.0.9",
+    "prettier": "^1.13.0",
+    "remark-external-links": "^2.0.0",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "typescript": "^2.8.3"
   }
 }
