--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "devDependencies": {
     "docz": "^0.5.8",
     "prettier": "^1.13.7"
+  },
+  "dependencies": {
+    "docz-theme-default": "^0.5.8"
   }
 }
